Simplest native app tests for Calculator

--- a/jdi-light-mobile-examples/src/test/resources/android.properties
+++ b/jdi-light-mobile-examples/src/test/resources/android.properties
@@ -1,3 +1,7 @@
 platform=Android
-deviceName=emulator-5554
-browserName=Chrome
+deviceName=CB5A239Y88
+#browserName=Chrome
+
+appPackage=com.android.calculator2
+appActivity=com.android.calculator2.Calculator
+#chromedriverExecutable=C:\\Work\\jdi-light\\jdi-light-mobile-examples\\src\\test\\resources\\chromedriver_2.44.exe
