--- a/jdi-light-html-tests/src/test/resources/test.properties
+++ b/jdi-light-html-tests/src/test/resources/test.properties
@@ -1,4 +1,7 @@
-driver=${driver}
+driver=android
+
+remote.type=appium
+local.url=http://0.0.0.0:4723/wd/hub
 #driver.version=2.23
 timeout.wait.element=25
 domain=https://jdi-testing.github.io/jdi-light/
