--- a/jdi-light-mobile-examples/pom.xml
+++ b/jdi-light-mobile-examples/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>testng</artifactId>
             <version>7.0.0-beta1</version>
         </dependency>
+        <dependency>
+            <groupId>com.epam.jdi</groupId>
+            <artifactId>jdi-light-html</artifactId>
+            <version>1.1.18</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
