--- a/jdi-light-mobile-examples/src/test/resources/test.properties
+++ b/jdi-light-mobile-examples/src/test/resources/test.properties
@@ -1,6 +1,7 @@
 driver=android
 
 remote.type=appium
+local.url=http://0.0.0.0:4723/wd/hub
 #driver.remote.url=http://0.0.0.0:4723/wd/hub
 #driver.version= 2.46 | PRELATEST | LATEST
 timeout.wait.element=10
@@ -20,3 +21,4 @@ log.level=STEP
 #demo.mode=false | true
 #demo.delay=2
 #screenshot.strategy=on fail | on | off
+#appium.capabilities.path=android.properties
